Added background gif

--- a/KickboxingCombinations/Base.lproj/Main.storyboard
+++ b/KickboxingCombinations/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="SkV-QD-BUk">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="SkV-QD-BUk">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -158,13 +159,18 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="13O-2q-mJI">
+                                <rect key="frame" x="16" y="64" width="568" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
                         </subviews>
-                        <color key="backgroundColor" red="0.22640607600000001" green="1" blue="0.15633545569999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="h1v-Qg-7hx" firstAttribute="leading" secondItem="1U9-gA-uen" secondAttribute="leading" id="17U-Ow-2uQ"/>
                             <constraint firstAttribute="centerX" secondItem="Xfb-eQ-hQv" secondAttribute="centerX" id="1Tp-6J-aw8"/>
                             <constraint firstItem="eUT-Wb-CME" firstAttribute="leading" secondItem="kuc-eM-5A5" secondAttribute="trailing" constant="30" id="4Dn-7I-XFz"/>
                             <constraint firstItem="h1v-Qg-7hx" firstAttribute="top" secondItem="kuc-eM-5A5" secondAttribute="top" id="5CT-mb-bcY"/>
+                            <constraint firstItem="AQk-IB-kaM" firstAttribute="top" secondItem="13O-2q-mJI" secondAttribute="bottom" id="60K-Om-Ash"/>
                             <constraint firstItem="kuc-eM-5A5" firstAttribute="leading" secondItem="h1v-Qg-7hx" secondAttribute="trailing" id="6dk-7p-y6l"/>
                             <constraint firstItem="h1v-Qg-7hx" firstAttribute="bottom" secondItem="kuc-eM-5A5" secondAttribute="bottom" id="6x3-92-JxA"/>
                             <constraint firstItem="rqG-dD-JWw" firstAttribute="top" secondItem="1U9-gA-uen" secondAttribute="top" id="70P-lI-cJW"/>
@@ -187,6 +193,7 @@
                             <constraint firstItem="Quz-6U-gdE" firstAttribute="centerY" secondItem="f2x-1B-cl5" secondAttribute="centerY" id="MFQ-7X-5N5"/>
                             <constraint firstItem="sqf-En-LOs" firstAttribute="centerY" secondItem="Xfb-eQ-hQv" secondAttribute="centerY" id="MhF-EK-2Kn"/>
                             <constraint firstAttribute="centerX" secondItem="htE-7m-R9b" secondAttribute="centerX" id="N0e-1f-JfQ"/>
+                            <constraint firstItem="13O-2q-mJI" firstAttribute="top" secondItem="MyX-hX-Jqz" secondAttribute="bottom" id="Nmc-hH-ClG"/>
                             <constraint firstItem="shm-71-ssI" firstAttribute="top" secondItem="Xfb-eQ-hQv" secondAttribute="top" id="O8r-2b-wcM"/>
                             <constraint firstItem="Xfb-eQ-hQv" firstAttribute="leading" secondItem="shm-71-ssI" secondAttribute="trailing" constant="30" id="PlB-tX-yZs"/>
                             <constraint firstItem="Agt-vv-Rv2" firstAttribute="leading" secondItem="h1v-Qg-7hx" secondAttribute="leading" id="Plu-UO-aCQ"/>
@@ -196,6 +203,9 @@
                                 <variation key="heightClass=compact-widthClass=compact" constant="5"/>
                             </constraint>
                             <constraint firstAttribute="centerX" secondItem="kuc-eM-5A5" secondAttribute="centerX" id="WrY-WI-W3b"/>
+                            <constraint firstItem="eo8-2v-eJO" firstAttribute="top" secondItem="13O-2q-mJI" secondAttribute="bottom" constant="26" id="XOO-L2-rlI"/>
+                            <constraint firstItem="13O-2q-mJI" firstAttribute="leading" secondItem="3OU-Yd-dfL" secondAttribute="leadingMargin" id="ZDQ-Qr-Lo3"/>
+                            <constraint firstItem="13O-2q-mJI" firstAttribute="top" secondItem="MyX-hX-Jqz" secondAttribute="bottom" id="ZXb-Sp-fw9"/>
                             <constraint firstItem="h1v-Qg-7hx" firstAttribute="top" secondItem="eUT-Wb-CME" secondAttribute="top" id="Zgr-PX-QAO"/>
                             <constraint firstItem="kuc-eM-5A5" firstAttribute="top" secondItem="fyA-qa-2BR" secondAttribute="bottom" constant="20" id="Zui-U2-fcv"/>
                             <constraint firstAttribute="centerX" secondItem="gx4-f7-oKv" secondAttribute="centerX" id="a8H-gG-dCK"/>
@@ -212,6 +222,7 @@
                             <constraint firstItem="fyA-qa-2BR" firstAttribute="top" secondItem="MyX-hX-Jqz" secondAttribute="bottom" constant="20" id="fLY-Kc-U8E">
                                 <variation key="heightClass=compact-widthClass=compact" constant="5"/>
                             </constraint>
+                            <constraint firstItem="sqf-En-LOs" firstAttribute="leading" secondItem="13O-2q-mJI" secondAttribute="trailing" id="h83-cx-ci9"/>
                             <constraint firstItem="h1v-Qg-7hx" firstAttribute="centerY" secondItem="kuc-eM-5A5" secondAttribute="centerY" id="hKL-YT-Zc5"/>
                             <constraint firstItem="DIj-9c-FuB" firstAttribute="centerY" secondItem="rqG-dD-JWw" secondAttribute="centerY" id="kpi-7k-GhT"/>
                             <constraint firstItem="htE-7m-R9b" firstAttribute="top" secondItem="rqG-dD-JWw" secondAttribute="bottom" constant="15" id="mbl-IS-bj6">
@@ -225,9 +236,11 @@
                             <constraint firstItem="PJ4-W0-1T6" firstAttribute="centerY" secondItem="9s5-Y2-lKv" secondAttribute="centerY" id="t1k-cg-1lh"/>
                             <constraint firstItem="DIj-9c-FuB" firstAttribute="top" secondItem="rqG-dD-JWw" secondAttribute="top" id="thG-k4-ZfK"/>
                             <constraint firstAttribute="centerX" secondItem="PJ4-W0-1T6" secondAttribute="centerX" id="uaY-X5-6w4"/>
+                            <constraint firstItem="13O-2q-mJI" firstAttribute="leading" secondItem="3OU-Yd-dfL" secondAttribute="leadingMargin" id="v21-j3-hfb"/>
                             <constraint firstItem="f2x-1B-cl5" firstAttribute="top" secondItem="htE-7m-R9b" secondAttribute="bottom" constant="10" id="vPf-fk-VVK">
                                 <variation key="heightClass=compact-widthClass=compact" constant="5"/>
                             </constraint>
+                            <constraint firstAttribute="trailingMargin" secondItem="13O-2q-mJI" secondAttribute="trailing" id="wqy-dS-Ji2"/>
                             <constraint firstItem="eo8-2v-eJO" firstAttribute="top" secondItem="Xfb-eQ-hQv" secondAttribute="bottom" constant="15" id="xR7-MD-Ig3">
                                 <variation key="heightClass=compact-widthClass=compact" constant="8"/>
                             </constraint>
@@ -239,6 +252,8 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="ZXb-Sp-fw9"/>
+                                <exclude reference="v21-j3-hfb"/>
                                 <exclude reference="5CT-mb-bcY"/>
                                 <exclude reference="6x3-92-JxA"/>
                                 <exclude reference="Zgr-PX-QAO"/>
@@ -249,12 +264,14 @@
                                 <exclude reference="A4E-A7-eTP"/>
                                 <exclude reference="KvG-B2-lbx"/>
                                 <exclude reference="PlB-tX-yZs"/>
+                                <exclude reference="XOO-L2-rlI"/>
                                 <exclude reference="yMX-eI-JgV"/>
                                 <exclude reference="70P-lI-cJW"/>
                                 <exclude reference="4Dn-7I-XFz"/>
                                 <exclude reference="bVf-jb-tam"/>
                                 <exclude reference="IEV-mn-z8O"/>
                                 <exclude reference="Jf1-60-vJk"/>
+                                <exclude reference="h83-cx-ci9"/>
                                 <exclude reference="phg-2A-Ins"/>
                                 <exclude reference="thG-k4-ZfK"/>
                                 <exclude reference="EwI-vR-bW4"/>
@@ -286,6 +303,7 @@
                         <outlet property="warningRightButton" destination="Quz-6U-gdE" id="U4j-HW-2p4"/>
                         <outlet property="warningTextLabel" destination="f2x-1B-cl5" id="LY4-2k-Eha"/>
                         <outlet property="warningTitleTextlabel" destination="htE-7m-R9b" id="Cma-4G-gK1"/>
+                        <outlet property="webViewBG" destination="13O-2q-mJI" id="HkZ-Oo-AQr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QLM-3F-ZOH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -355,7 +373,7 @@
                                 </state>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.95158297479999998" blue="7.621079918e-05" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="ac7-2K-KWx" secondAttribute="centerX" id="0bL-aJ-JVc"/>
                             <constraint firstItem="hDu-4S-hX9" firstAttribute="top" relation="lessThanOrEqual" secondItem="ac7-2K-KWx" secondAttribute="bottom" constant="50" id="2hw-MC-B5f"/>
