--- a/KickboxingCombinations/Base.lproj/Main.storyboard
+++ b/KickboxingCombinations/Base.lproj/Main.storyboard
@@ -165,6 +165,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="fyA-qa-2BR" firstAttribute="top" secondItem="MyX-hX-Jqz" secondAttribute="bottom" constant="20" id="0Nc-Fh-txe"/>
                             <constraint firstItem="h1v-Qg-7hx" firstAttribute="leading" secondItem="1U9-gA-uen" secondAttribute="leading" id="17U-Ow-2uQ"/>
                             <constraint firstAttribute="centerX" secondItem="Xfb-eQ-hQv" secondAttribute="centerX" id="1Tp-6J-aw8"/>
                             <constraint firstItem="eUT-Wb-CME" firstAttribute="leading" secondItem="kuc-eM-5A5" secondAttribute="trailing" constant="30" id="4Dn-7I-XFz"/>
@@ -175,7 +176,6 @@
                             <constraint firstItem="h1v-Qg-7hx" firstAttribute="leading" secondItem="9s5-Y2-lKv" secondAttribute="leading" id="7sb-Gq-rtZ"/>
                             <constraint firstAttribute="centerX" secondItem="fyA-qa-2BR" secondAttribute="centerX" id="8qa-y1-Mtj"/>
                             <constraint firstItem="Xfb-eQ-hQv" firstAttribute="top" secondItem="sqf-En-LOs" secondAttribute="top" id="A4E-A7-eTP"/>
-                            <constraint firstItem="p1Z-Dj-hQN" firstAttribute="top" secondItem="MyX-hX-Jqz" secondAttribute="bottom" id="BSR-Dn-aTB"/>
                             <constraint firstItem="rqG-dD-JWw" firstAttribute="centerY" secondItem="1U9-gA-uen" secondAttribute="centerY" id="Bzg-zH-0R5"/>
                             <constraint firstItem="h1v-Qg-7hx" firstAttribute="leading" secondItem="shm-71-ssI" secondAttribute="leading" id="CPH-Pw-qaN"/>
                             <constraint firstItem="h2c-Ym-DP6" firstAttribute="trailing" secondItem="eUT-Wb-CME" secondAttribute="trailing" id="Clt-aY-em3"/>
@@ -186,6 +186,7 @@
                             <constraint firstItem="sqf-En-LOs" firstAttribute="leading" secondItem="Xfb-eQ-hQv" secondAttribute="trailing" constant="30" id="Jf1-60-vJk"/>
                             <constraint firstItem="Agt-vv-Rv2" firstAttribute="centerY" secondItem="f2x-1B-cl5" secondAttribute="centerY" id="K1P-2L-Ou4"/>
                             <constraint firstItem="kuc-eM-5A5" firstAttribute="centerY" secondItem="eUT-Wb-CME" secondAttribute="centerY" id="K2I-Y8-rTg"/>
+                            <constraint firstItem="AQk-IB-kaM" firstAttribute="top" secondItem="p1Z-Dj-hQN" secondAttribute="bottom" id="KOs-GI-Zu1"/>
                             <constraint firstItem="kuc-eM-5A5" firstAttribute="leading" secondItem="h1v-Qg-7hx" secondAttribute="trailing" constant="30" id="Ko5-Xx-l2h"/>
                             <constraint firstItem="Xfb-eQ-hQv" firstAttribute="top" secondItem="shm-71-ssI" secondAttribute="top" id="KvG-B2-lbx"/>
                             <constraint firstAttribute="centerX" secondItem="4eC-6F-1Nc" secondAttribute="centerX" id="LLP-M5-bgh"/>
@@ -215,10 +216,6 @@
                             <constraint firstItem="eUT-Wb-CME" firstAttribute="leading" secondItem="kuc-eM-5A5" secondAttribute="trailing" id="cax-jQ-PMy"/>
                             <constraint firstItem="DIj-9c-FuB" firstAttribute="trailing" secondItem="eUT-Wb-CME" secondAttribute="trailing" id="eJF-Ut-3q5"/>
                             <constraint firstAttribute="trailing" secondItem="p1Z-Dj-hQN" secondAttribute="trailing" id="esz-5N-Lz0"/>
-                            <constraint firstItem="fyA-qa-2BR" firstAttribute="top" secondItem="MyX-hX-Jqz" secondAttribute="bottom" constant="20" id="fLY-Kc-U8E">
-                                <variation key="heightClass=compact-widthClass=compact" constant="5"/>
-                            </constraint>
-                            <constraint firstItem="AQk-IB-kaM" firstAttribute="top" secondItem="p1Z-Dj-hQN" secondAttribute="bottom" id="h0P-bG-1ZQ"/>
                             <constraint firstItem="h1v-Qg-7hx" firstAttribute="centerY" secondItem="kuc-eM-5A5" secondAttribute="centerY" id="hKL-YT-Zc5"/>
                             <constraint firstAttribute="trailingMargin" secondItem="p1Z-Dj-hQN" secondAttribute="trailing" id="i02-Zr-Q3z"/>
                             <constraint firstItem="DIj-9c-FuB" firstAttribute="centerY" secondItem="rqG-dD-JWw" secondAttribute="centerY" id="kpi-7k-GhT"/>
@@ -242,6 +239,7 @@
                             </constraint>
                             <constraint firstItem="p1Z-Dj-hQN" firstAttribute="leading" secondItem="3OU-Yd-dfL" secondAttribute="leading" id="xgc-lP-eG7"/>
                             <constraint firstItem="PJ4-W0-1T6" firstAttribute="top" secondItem="9s5-Y2-lKv" secondAttribute="top" id="yMX-eI-JgV"/>
+                            <constraint firstItem="p1Z-Dj-hQN" firstAttribute="top" secondItem="MyX-hX-Jqz" secondAttribute="bottom" id="z0I-IX-xCI"/>
                             <constraint firstAttribute="centerX" secondItem="f2x-1B-cl5" secondAttribute="centerX" id="zGz-9K-JkR"/>
                             <constraint firstItem="gx4-f7-oKv" firstAttribute="top" secondItem="PJ4-W0-1T6" secondAttribute="bottom" constant="15" id="zwX-R7-kPd">
                                 <variation key="heightClass=compact-widthClass=compact" constant="8"/>
