Added swipe to view from setupView

--- a/KickboxingCombinations/Base.lproj/Main.storyboard
+++ b/KickboxingCombinations/Base.lproj/Main.storyboard
@@ -404,5 +404,23 @@
             </objects>
             <point key="canvasLocation" x="1004" y="315"/>
         </scene>
+        <!--ComboListViewController-->
+        <scene sceneID="mG9-Uj-x7I">
+            <objects>
+                <viewController storyboardIdentifier="ComboListViewController" title="ComboListViewController" id="izS-8Z-p1E" customClass="ComboListViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="XZt-9N-Qd0"/>
+                        <viewControllerLayoutGuide type="bottom" id="aCP-es-KeL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="E5f-Zt-ThC">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.023529411760000001" green="0.098039215690000001" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rTo-eV-ttU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="314" y="1014"/>
+        </scene>
     </scenes>
 </document>
