--- a/KickboxingCombinations/Base.lproj/Main.storyboard
+++ b/KickboxingCombinations/Base.lproj/Main.storyboard
@@ -415,7 +415,83 @@
                     <view key="view" contentMode="scaleToFill" id="E5f-Zt-ThC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Combination List" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o0c-Sf-QzU">
+                                <rect key="frame" x="207" y="30" width="186" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="textColor" red="0.67450980390000004" green="0.71372549019999998" blue="0.73725490199999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 - Jab" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8vR-pH-35y">
+                                <rect key="frame" x="273" y="80" width="55" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.67450980390000004" green="0.71372549019999998" blue="0.73725490199999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 - Cross" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d79-Tt-83P">
+                                <rect key="frame" x="265" y="121" width="71" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.67450980390000004" green="0.71372549019999998" blue="0.73725490199999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 - Lead Hook" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0E7-xZ-ipn">
+                                <rect key="frame" x="245" y="162" width="110" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.67450980390000004" green="0.71372549019999998" blue="0.73725490199999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4 - Rear Hook" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MxI-be-OzA">
+                                <rect key="frame" x="246" y="203" width="108" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.67450980390000004" green="0.71372549019999998" blue="0.73725490199999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5 - Lead Uppercut" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aya-sQ-CTq">
+                                <rect key="frame" x="230" y="244" width="141" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.67450980390000004" green="0.71372549019999998" blue="0.73725490199999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6 - Rear Uppercut" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jpc-RF-hCb">
+                                <rect key="frame" x="231" y="285" width="138" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.67450980390000004" green="0.71372549019999998" blue="0.73725490199999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8 - Rear Leg Kick" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zzr-9D-HPI">
+                                <rect key="frame" x="233" y="367" width="134" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.67450980390000004" green="0.71372549019999998" blue="0.73725490199999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7 - Inside Leg Kick" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OCx-22-XGZ">
+                                <rect key="frame" x="228" y="326" width="144" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.67450980390000004" green="0.71372549019999998" blue="0.73725490199999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="0.023529411760000001" green="0.098039215690000001" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="Zzr-9D-HPI" secondAttribute="centerX" id="1P7-EZ-YGH"/>
+                            <constraint firstAttribute="centerX" secondItem="8vR-pH-35y" secondAttribute="centerX" id="8l5-WN-NDF"/>
+                            <constraint firstItem="0E7-xZ-ipn" firstAttribute="top" secondItem="d79-Tt-83P" secondAttribute="bottom" constant="20" id="APl-sO-nKQ"/>
+                            <constraint firstAttribute="centerX" secondItem="jpc-RF-hCb" secondAttribute="centerX" id="Hr0-hC-mGV"/>
+                            <constraint firstItem="d79-Tt-83P" firstAttribute="top" secondItem="8vR-pH-35y" secondAttribute="bottom" constant="20" id="Mn2-9x-V0u"/>
+                            <constraint firstAttribute="centerX" secondItem="o0c-Sf-QzU" secondAttribute="centerX" id="Omb-B8-P6e"/>
+                            <constraint firstItem="Aya-sQ-CTq" firstAttribute="top" secondItem="MxI-be-OzA" secondAttribute="bottom" constant="20" id="UJz-Yy-4dJ"/>
+                            <constraint firstItem="jpc-RF-hCb" firstAttribute="top" secondItem="Aya-sQ-CTq" secondAttribute="bottom" constant="20" id="V19-Hp-W6W"/>
+                            <constraint firstAttribute="centerX" secondItem="Aya-sQ-CTq" secondAttribute="centerX" id="dja-f7-bLY"/>
+                            <constraint firstAttribute="centerX" secondItem="OCx-22-XGZ" secondAttribute="centerX" id="hDZ-ku-jPg"/>
+                            <constraint firstItem="Zzr-9D-HPI" firstAttribute="top" secondItem="OCx-22-XGZ" secondAttribute="bottom" constant="20" id="mdp-BO-t4j"/>
+                            <constraint firstAttribute="centerX" secondItem="MxI-be-OzA" secondAttribute="centerX" id="r3Y-0B-kcg"/>
+                            <constraint firstItem="MxI-be-OzA" firstAttribute="top" secondItem="0E7-xZ-ipn" secondAttribute="bottom" constant="20" id="sCR-Mh-59W"/>
+                            <constraint firstAttribute="centerX" secondItem="0E7-xZ-ipn" secondAttribute="centerX" id="x5A-i8-kCj"/>
+                            <constraint firstAttribute="centerX" secondItem="d79-Tt-83P" secondAttribute="centerX" id="xaw-4N-gEd"/>
+                            <constraint firstItem="o0c-Sf-QzU" firstAttribute="top" secondItem="XZt-9N-Qd0" secondAttribute="bottom" constant="10" id="yfD-cd-cA8"/>
+                            <constraint firstItem="8vR-pH-35y" firstAttribute="top" secondItem="o0c-Sf-QzU" secondAttribute="bottom" constant="20" id="zLQ-Gg-eHd"/>
+                            <constraint firstItem="OCx-22-XGZ" firstAttribute="top" secondItem="jpc-RF-hCb" secondAttribute="bottom" constant="20" id="zN0-0j-3ho"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rTo-eV-ttU" userLabel="First Responder" sceneMemberID="firstResponder"/>
