--- a/KickboxingCombinations/Base.lproj/Main.storyboard
+++ b/KickboxingCombinations/Base.lproj/Main.storyboard
@@ -14,12 +14,31 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="6Gm-5b-JzN" kind="relationship" relationship="rootViewController" id="LuC-Er-oz9"/>
+                        <segue destination="mVq-A9-dq5" kind="relationship" relationship="rootViewController" id="CkE-a1-mLt"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZoA-cY-Ugk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-701" y="-263"/>
+            <point key="canvasLocation" x="-906" y="-29"/>
+        </scene>
+        <!--ContainerLoadScreen-->
+        <scene sceneID="6ma-SQ-07d">
+            <objects>
+                <viewController storyboardIdentifier="ContainerLoadViewController" title="ContainerLoadScreen" id="mVq-A9-dq5" customClass="ContainerLoadViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="LoB-HW-DcL"/>
+                        <viewControllerLayoutGuide type="bottom" id="ET2-60-R4F"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" restorationIdentifier="containerLoadView" id="M0o-3o-XXr">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.023529411760000001" green="0.098039215690000001" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="mwt-cO-cdi"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ILP-SW-LBi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-338" y="395"/>
         </scene>
         <!--SetupViewController-->
         <scene sceneID="DJ5-h2-XsJ">
